fix z-index overlap

--- a/src/assets/stylesheet/component/cards-accessibility.scss
+++ b/src/assets/stylesheet/component/cards-accessibility.scss
@@ -17,6 +17,7 @@
   height: 100%;
   position: absolute;
   opacity: 0.7;
+  z-index: 0;
 }
 
 .cards__icon--accessibility {
